# code42cli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODECLASSIFICATION  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  MANIFEST.in  README.md  add_departing_employee.csv  add_high_risk_employee.csv  aed_config.default.cfg  aed_cursor_store.py  aed_event_extraction_cli.py  common.py  config.default.cfg  profile  pyproject.toml  run_integration.py  setup.cfg  setup.py  test.py  test.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cla.yml  (+5 more)
c42sec/: __init__.py  args.py  base_output.py  clear_checkpoint.py  cursor_store.py  main.py  main_old.py  print_stdout.py  send_to.py  util.py  write_to.py
code42/: __init__.py  main.py  util.py
code42cli/: main.py  util.py
docs/: commands.md  conf.py  guides.md  index.md  requirements.txt
integration/: __init__.py  test_alert_rules.py  test_alerts.py  test_auditlogs.py  test_departing_employee.py  test_high_risk_employee.py  test_legal_hold.py  util.py
tests/: conftest.py  test_args.py  test_bulk.py  test_commands.py  test_completer.py  test_config.py  test_cursor_store.py  test_date_helper.py  test_date_parse.py  test_extraction.py  test_file_readers.py  test_invoker.py  test_loaders.py  test_logger.py  test_logger_factory.py  test_magic_date_type.py  test_main.py  test_output_formats.py  test_parser.py  test_password.py  test_profile.py  test_progress_bar.py  test_sdk_client.py  test_tree_nodes.py  test_util.py  test_worker.py
(+390 files in other folders)
