[metadata]
license_file = LICENSE.md

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions,
# ISC = implicit str concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, different opinion from black
    E203
    # line length, handled by black
    B950
    E501
    # bare except, handled by bugbear B001
    E722
    # binary operation line break, different opinion from black
    W503
    # exception chaining
    B904
# up to 88 allowed by bugbear B950
max-line-length = 80
